--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4629,7 +4629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 108,
    "id": "54a8895c",
    "metadata": {},
    "outputs": [
@@ -4658,13 +4658,6 @@
        "      <th>10th</th>\n",
        "      <th>11th</th>\n",
        "      <th>12th</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>school_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4703,21 +4696,100 @@
        "      <td>83.842105</td>\n",
        "      <td>83.356164</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.438495</td>\n",
+       "      <td>77.337408</td>\n",
+       "      <td>77.136029</td>\n",
+       "      <td>77.186567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.787402</td>\n",
+       "      <td>83.429825</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>82.855422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.027251</td>\n",
+       "      <td>75.908735</td>\n",
+       "      <td>76.446602</td>\n",
+       "      <td>77.225641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.187857</td>\n",
+       "      <td>76.691117</td>\n",
+       "      <td>77.491653</td>\n",
+       "      <td>76.863248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.625455</td>\n",
+       "      <td>83.372000</td>\n",
+       "      <td>84.328125</td>\n",
+       "      <td>84.121547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.859966</td>\n",
+       "      <td>76.612500</td>\n",
+       "      <td>76.395626</td>\n",
+       "      <td>77.690748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.420755</td>\n",
+       "      <td>82.917411</td>\n",
+       "      <td>83.383495</td>\n",
+       "      <td>83.778976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.590022</td>\n",
+       "      <td>83.087886</td>\n",
+       "      <td>83.498795</td>\n",
+       "      <td>83.497041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.085578</td>\n",
+       "      <td>83.724422</td>\n",
+       "      <td>83.195326</td>\n",
+       "      <td>83.035794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.264706</td>\n",
+       "      <td>84.010288</td>\n",
+       "      <td>83.836782</td>\n",
+       "      <td>83.644986</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            9th       10th       11th       12th\n",
-       "school_name                                                     \n",
-       "Bailey High School    77.083676  76.996772  77.515588  76.492218\n",
-       "Cabrera High School   83.094697  83.154506  82.765560  83.277487\n",
-       "Figueroa High School  76.403037  76.539974  76.884344  77.151369\n",
-       "Ford High School      77.361345  77.672316  76.918058  76.179963\n",
-       "Griffin High School   82.044010  84.229064  83.842105  83.356164"
+       "                             9th       10th       11th       12th\n",
+       "Bailey High School     77.083676  76.996772  77.515588  76.492218\n",
+       "Cabrera High School    83.094697  83.154506  82.765560  83.277487\n",
+       "Figueroa High School   76.403037  76.539974  76.884344  77.151369\n",
+       "Ford High School       77.361345  77.672316  76.918058  76.179963\n",
+       "Griffin High School    82.044010  84.229064  83.842105  83.356164\n",
+       "Hernandez High School  77.438495  77.337408  77.136029  77.186567\n",
+       "Holden High School     83.787402  83.429825  85.000000  82.855422\n",
+       "Huang High School      77.027251  75.908735  76.446602  77.225641\n",
+       "Johnson High School    77.187857  76.691117  77.491653  76.863248\n",
+       "Pena High School       83.625455  83.372000  84.328125  84.121547\n",
+       "Rodriguez High School  76.859966  76.612500  76.395626  77.690748\n",
+       "Shelton High School    83.420755  82.917411  83.383495  83.778976\n",
+       "Thomas High School     83.590022  83.087886  83.498795  83.497041\n",
+       "Wilson High School     83.085578  83.724422  83.195326  83.035794\n",
+       "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4730,12 +4802,12 @@
     "               \"11th\": eleventh_grade_math_scores,\n",
     "               \"12th\": twelfth_grade_math_scores})\n",
     "\n",
-    "math_scores_by_grade.head()"
+    "math_scores_by_grade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 112,
    "id": "8f27c077",
    "metadata": {},
    "outputs": [
@@ -4764,13 +4836,6 @@
        "      <th>10th</th>\n",
        "      <th>11th</th>\n",
        "      <th>12th</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>school_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4815,7 +4880,6 @@
       ],
       "text/plain": [
        "                            9th       10th       11th       12th\n",
-       "school_name                                                     \n",
        "Bailey High School    81.303155  80.907183  80.945643  80.912451\n",
        "Cabrera High School   83.676136  84.253219  83.788382  84.287958\n",
        "Figueroa High School  81.198598  81.408912  80.640339  81.384863\n",
@@ -4823,7 +4887,7 @@
        "Griffin High School   83.369193  83.706897  84.288089  84.013699"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4841,7 +4905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 109,
    "id": "4c1da10d",
    "metadata": {},
    "outputs": [
@@ -4908,20 +4972,100 @@
        "      <td>83.8</td>\n",
        "      <td>83.4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.4</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>82.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.2</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>76.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.9</td>\n",
+       "      <td>76.6</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>82.9</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.3</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    77.1  77.0  77.5  76.5\n",
-       "Cabrera High School   83.1  83.2  82.8  83.3\n",
-       "Figueroa High School  76.4  76.5  76.9  77.2\n",
-       "Ford High School      77.4  77.7  76.9  76.2\n",
-       "Griffin High School   82.0  84.2  83.8  83.4"
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     77.1  77.0  77.5  76.5\n",
+       "Cabrera High School    83.1  83.2  82.8  83.3\n",
+       "Figueroa High School   76.4  76.5  76.9  77.2\n",
+       "Ford High School       77.4  77.7  76.9  76.2\n",
+       "Griffin High School    82.0  84.2  83.8  83.4\n",
+       "Hernandez High School  77.4  77.3  77.1  77.2\n",
+       "Holden High School     83.8  83.4  85.0  82.9\n",
+       "Huang High School      77.0  75.9  76.4  77.2\n",
+       "Johnson High School    77.2  76.7  77.5  76.9\n",
+       "Pena High School       83.6  83.4  84.3  84.1\n",
+       "Rodriguez High School  76.9  76.6  76.4  77.7\n",
+       "Shelton High School    83.4  82.9  83.4  83.8\n",
+       "Thomas High School     83.6  83.1  83.5  83.5\n",
+       "Wilson High School     83.1  83.7  83.2  83.0\n",
+       "Wright High School     83.3  84.0  83.8  83.6"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4943,12 +5087,12 @@
     "math_scores_by_grade.index.name = None\n",
     "    \n",
     "# Display the DataFrame.\n",
-    "math_scores_by_grade.head()"
+    "math_scores_by_grade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 113,
    "id": "d02c4b97",
    "metadata": {},
    "outputs": [
@@ -5015,20 +5159,100 @@
        "      <td>84.3</td>\n",
        "      <td>84.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.7</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.3</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.8</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.1</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.7</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.9</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    81.3  80.9  80.9  80.9\n",
-       "Cabrera High School   83.7  84.3  83.8  84.3\n",
-       "Figueroa High School  81.2  81.4  80.6  81.4\n",
-       "Ford High School      80.6  81.3  80.4  80.7\n",
-       "Griffin High School   83.4  83.7  84.3  84.0"
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     81.3  80.9  80.9  80.9\n",
+       "Cabrera High School    83.7  84.3  83.8  84.3\n",
+       "Figueroa High School   81.2  81.4  80.6  81.4\n",
+       "Ford High School       80.6  81.3  80.4  80.7\n",
+       "Griffin High School    83.4  83.7  84.3  84.0\n",
+       "Hernandez High School  80.9  80.7  81.4  80.9\n",
+       "Holden High School     83.7  83.3  83.8  84.7\n",
+       "Huang High School      81.3  81.5  81.4  80.3\n",
+       "Johnson High School    81.3  80.8  80.6  81.2\n",
+       "Pena High School       83.8  83.6  84.3  84.6\n",
+       "Rodriguez High School  81.0  80.6  80.9  80.4\n",
+       "Shelton High School    84.1  83.4  84.4  82.8\n",
+       "Thomas High School     83.7  84.3  83.6  83.8\n",
+       "Wilson High School     83.9  84.0  83.8  84.3\n",
+       "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5049,7 +5273,7 @@
     "#Remove the index name.\n",
     "reading_scores_by_grade.index.name = None\n",
     "# Display the data frame.\n",
-    "reading_scores_by_grade.head() "
+    "reading_scores_by_grade"
    ]
   },
   {
